@@ -25,4 +25,6 @@ unusable \
   kernel-image-2.6.8-power3 \
   kernel-image-2.6.8-power3-smp \
   kernel-image-2.6.8-power4 \
-  kernel-image-2.6.8-power4-smp
+  kernel-image-2.6.8-power4-smp \
+  linux-image-2.6-powerpc64 \
+  linux-image-2.6-powerpc64-smp
