@@ -2,6 +2,7 @@ base-installer (1.50) UNRELEASED; urgency=low
 
   * Add PPC970MP (actually PPC970*) and POWER5 to the list of powerpc64
     systems (closes: #339283, http://launchpad.net/bugs/35116).
+  * Don't consider powerpc64 kernels usable on powerpc.
 
  -- Colin Watson <cjwatson@debian.org>  Thu, 16 Mar 2006 09:38:49 +0000
 
